--- a/src/app/post/post-create/post-create.component.html
+++ b/src/app/post/post-create/post-create.component.html
@@ -1,5 +1,5 @@
 <mat-card>
-  <form #postForm="ngForm" (submit)="onAddPost()">
+  <form #postForm="ngForm" (submit)="onAddPost(postForm)">
     <mat-card-content>
       <mat-form-field appearance="fill">
         <mat-label>Title</mat-label>
