--- a/src/app/post/post-list/post-list.component.html
+++ b/src/app/post/post-list/post-list.component.html
@@ -7,7 +7,7 @@
     </mat-expansion-panel-header>
     <p>{{post.content}}</p>
     <mat-action-row>
-      <button mat-button color="primary" (click)="editPost()">Edit</button>
+      <button mat-button color="primary" (click)="editPost(post)">Edit</button>
       <button mat-button color="warn" (click)="deletePost(post.id)">Delete</button>
     </mat-action-row>
   </mat-expansion-panel>
