--- a/src/app/post/toolbar/toolbar.component.css
+++ b/src/app/post/toolbar/toolbar.component.css
@@ -1,3 +1,18 @@
 .example-spacer {
   flex: 1 1 auto;
 }
+
+a {
+  text-decoration: none;
+  color: white;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.spacer {
+  flex: 1 1 auto;
+}
